[package]
name = "dioxus_fullstack_flake"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# These dependencies have been set to the exact versions so nix build works, 0.6.1 of dioxus will bring in the same
# version of dioxus-cli-config which requires 0.2.99 of wasm-bindgen and the dioxus-cli is hard coded to require 0.2.97
dioxus = { version = "=0.6.0", features = ["router", "fullstack"] }
wasm-bindgen = "=0.2.97"

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
